apps/base/vikunja/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.3.0
          ports:
            - containerPort: 3456
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: vikunja-files
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-files
          persistentVolumeClaim:
            claimName: vikunja-files
