apps/base/vikunja/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  selector:
    app: vikunja
  ports:
  - port: 3456
    targetPort: 3456
    protocol: TCP
