apps/base/vikunja/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    traefik.ingress.kubernetes.io/headers: |
      browserXssFilter: true
      contentTypeNosniff: true
      forceSTSHeader: true
      stsIncludeSubdomains: true
      stsPreload: true
      stsSeconds: 31536000
      customFrameOptionsValue: "SAMEORIGIN"
      contentSecurityPolicy: "default-src 'self'; script-src 'self'"
      referrerPolicy: "strict-origin-when-cross-origin"
      permissionsPolicy: "camera=(), microphone=(), geolocation=()"
spec:
  tls:
  - hosts:
    - vikunja.leotsgo.dev
  rules:
  - host: vikunja.leotsgo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port:
              number: 3456
